  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.


Features:

- New Key "Alt+T" (function "selchs") introduced. It allows you to manually
  specify the charcter set to use for recoding a mail when reading it. You
  should only need this in rare occasions (like when trying to read Russian
  mails that do not have CHRS kludges in a Western setup). Normally, the
  AssumeCharset keywords should do all work for you.

- Added recoding tables for cyrillic codepages (KOI8-RU, CP866, CP1125,
  ISO 8859-5). Msged is now fully "cyrillified". Please read the manual,
  section "Special Characters", for information on how to set up Msged
  in a cyrillic environment.

- New keywords "readmap" and "writemap". You can use these to configure the
  location of the READMAPS.DAT style input recoding map and the WRITMAPS.DAT
  style export recoding map. Previously, those file names were hardcoded in
  the executable. Changing the default is useful if you want to write two
  config files for Msged, one for a Western codedpage and one for a Cyrillic
  codepage, for example. See the section "Special Characters" in the
  "Advanced Topics" section of the manual for more information.

- The UNIX version now draws pseudographics (instead of the ugly minus plus
  pipe graphics that was used previously) if the termcap entry suggests that
  the terminal can do it. Looks much nicer than before.

[ - JAM Support. Still experimental. Thanks to Fedor Lizunkov. ]
[ JAM SUPPORT DOES NOT WORK YET! DO NOT USE IT! ]

- Character set translate now does not only recode the mail text, but also
  the message header (from, to, and subject field). This allows for umlauts